--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "keywords": [
     "php",
-    "amazon",
+    "mailxpert",
     "api",
     "oauth",
     "oauth2",
@@ -19,13 +19,12 @@
     "authentication"
   ],
   "require": {
-    "php": "^5.6|^7.0",
+    "php": "^7.3|^8.0",
     "league/oauth2-client": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0",
-    "symfony/var-dumper": "^3.4",
-    "mockery/mockery": "^1.2"
+    "phpunit/phpunit": "^11.0",
+    "symfony/var-dumper": "^3.4"
   },
   "autoload": {
     "psr-4": {
@@ -35,12 +34,6 @@
   "autoload-dev": {
     "psr-4": {
       "Mailxpert\\OAuth2\\Client\\Test\\": "tests/src/"
-    }
-  },
-  "repositories": {
-    "packagist.org": {
-      "type": "composer",
-      "url": "https://repo-eu-uk-1.packagist.org"
     }
   }
 }
