--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,11 @@
   "authors": [
     {
       "name": "ARTACK WebLab GmbH",
-      "homepage": "https://www.artack.ch"
+      "homepage": "https://artack.ch"
     }
   ],
   "keywords": [
     "php",
-    "amazon",
     "api",
     "oauth",
     "oauth2",
@@ -19,13 +18,13 @@
     "authentication"
   ],
   "require": {
-    "php": "^5.6|^7.0",
+    "php": "^7.4|^8.0",
     "league/oauth2-client": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0",
-    "symfony/var-dumper": "^3.4",
-    "mockery/mockery": "^1.2"
+    "phpunit/phpunit": "^9",
+    "symfony/var-dumper": "^5.4",
+    "mockery/mockery": "^1.6"
   },
   "autoload": {
     "psr-4": {
@@ -37,10 +36,9 @@
       "Mailxpert\\OAuth2\\Client\\Test\\": "tests/src/"
     }
   },
-  "repositories": {
-    "packagist.org": {
-      "type": "composer",
-      "url": "https://repo-eu-uk-1.packagist.org"
+  "config": {
+    "platform": {
+      "php": "7.4.33"
     }
   }
 }
